# lexica

./: .gitignore  README.md
.github/workflows/: rust.yml
frontend/src/: README.md  bottombar.js  documentation.html  eval_engine.js  eval_engine_helpers.js  formatting.js  io.js  layout.css  lexicon.js  main.html  programs.js  spreadsheet.js  style.css  synhi.css  (+1 more)
sound changer/: Cargo.toml  sava-words.txt  sava1.csc  sava1a.csc  spec.txt  test.csc  test2.csc
sound changer/examples/: vulgar-latin.json
sound changer/src/: applicator.rs  args.rs  constructor.rs  data.rs  io.rs  main.rs  rules.rs  test.txt  tests.rs  websocket_handler.rs
sound changer/src/manual_ux/: conjugator.rs  generative.rs  mod.rs  output.rs  project.rs  rebuilder.rs  table.rs  tests.rs
sound changer/src/manual_ux/generative/: construction.rs  data_types.rs  error_handling.rs  execution.rs  node_builder.rs  tokenizer.rs
sound changer/src/sc/: applicator.rs  constructor.rs  data.rs  mod.rs  rules.rs  tests.rs
sound changer/test-data/: diacritics-test.lsc  full-ipa.lsc  int-test-1.lsc  int-test-1.words.txt  int-test-2.lsc  int-test-2.words.txt
sound changer/test-data/backend/: conjugator_test_data.txt  conjugator_test_data_1.txt  conjugator_test_data_2.txt  conjugator_test_data_3.txt
sound changer/test-data/backend/1/: 001.ltable  002.ltable  correct.txt
sound changer/test-data/backend/2/: 000 - dict.ltable  001 - noun affices.ltable  002 - nouns.ltable  007 - other.ltable  010 - dict.ltable  1-2.lsc  correct.txt
sound changer/test-data/backend/3/: 0.ltable  1.ltable  correct.txt
