[package]
name = "lexica-sc"
version = "0.1.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
regex = "1.6.0"
fancy-regex = "0.12.0"
priority-queue = "1.2.3"
tungstenite = "0.20.1"
serde = { version = "1.0.145", features = ["derive", "rc"] }
serde_json = "1.0.86"
rand = "0.8.5"
no-panic = "0.1"
const_format = "0.2.28"
clap = { version = "4.3.0", features = ["derive"] }
glob = "0.3.1"
tabled = "0.14.0"